--- a/NewsTagil/src/main/res/layout-large/composite_contact_content.xml
+++ b/NewsTagil/src/main/res/layout-large/composite_contact_content.xml
@@ -84,18 +84,14 @@
                         android:layout_below="@+id/linearLayout22"
                         android:layout_centerHorizontal="true"
                         android:background="#fffd8001"
-                        android:id="@+id/linearLayout2">
+                        
+                        android:id="@+id/contact_photo_panel">
+                    <include
+                            android:layout_width="fill_parent"
+                            android:layout_height="fill_parent"
+                            layout="@layout/composite_add_images"
+                            android:layout_gravity="left|center_vertical"/>
 
-                    <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textAppearance="?android:attr/textAppearanceSmall"
-                            android:text="Все фотографии"
-                            android:layout_marginTop="2dp"
-                            android:textSize="22dp"
-                            android:textColor="#ff474747"
-                            android:id="@+id/textView3"
-                            android:layout_gravity="center"/>
                 </LinearLayout>
 
 
@@ -104,7 +100,7 @@
                         android:layout_width="fill_parent"
                         android:layout_height="130dp"
                         android:background="@drawable/contact_ley_bg"
-                        android:layout_below="@+id/linearLayout2"
+                        android:layout_below="@+id/contact_photo_panel"
                         android:layout_centerHorizontal="true"
                         android:id="@+id/linearLayout3">
 
@@ -112,93 +108,14 @@
                 android:layout_width="fill_parent"
                 android:layout_height="130dp"
                 android:id="@+id/horizontalScrollView"
-                android:layout_centerVertical="true"
-
                 android:layout_alignLeft="@+id/imageView3">
 
-                    <RelativeLayout
-                            android:layout_width="fill_parent"
-                            android:layout_height="120dp"
-                            android:paddingTop="10dp">
-
-                    <LinearLayout android:layout_width="wrap_content"
-                                  android:layout_height="wrap_content">
-                        <ImageView
-                                android:layout_width="110dp"
-                                android:layout_height="110dp"
-                                android:layout_marginLeft="10dp"
-                                android:layout_marginTop="0dp"
-                                android:background="@drawable/ads_button_bg"
-                                android:id="@+id/imageView2"
-                                android:layout_gravity="left|center_vertical"/>
-
-                        <ImageView
-                                android:layout_width="110dp"
-                                android:layout_height="110dp"
-                                android:layout_marginLeft="10dp"
-                                android:layout_marginTop="0dp"
-                                android:background="@drawable/ads_button_bg"
-                                android:id="@+id/imageView3"
-                                android:layout_gravity="center"/>
-
-                        <ImageView
-                                android:layout_width="110dp"
-                                android:layout_height="110dp"
-                                android:layout_marginLeft="10dp"
-                                android:layout_marginTop="0dp"
-                                android:background="@drawable/ads_button_bg"
-                                android:id="@+id/imageView4"
-                                android:layout_gravity="center"/>
-
-                        <ImageView
-                                android:layout_width="110dp"
-                                android:layout_height="110dp"
-                                android:layout_marginLeft="10dp"
-                                android:layout_marginTop="0dp"
-                                android:background="@drawable/ads_button_bg"
-                                android:id="@+id/imageView5"
-                                android:layout_gravity="center"/>
-
-                        <ImageView
-                                android:layout_width="110dp"
-                                android:layout_height="110dp"
-                                android:layout_marginLeft="10dp"
-                                android:layout_marginTop="0dp"
-                                android:background="@drawable/ads_button_bg"
-                                android:id="@+id/imageView5"
-                                android:layout_gravity="center"/>
-
-                        <ImageView
-                                android:layout_width="110dp"
-                                android:layout_height="110dp"
-                                android:layout_marginLeft="10dp"
-                                android:layout_marginTop="0dp"
-                                android:background="@drawable/ads_button_bg"
-                                android:id="@+id/imageView5"
-                                android:layout_gravity="center"/>
-
-                        <ImageView
-                                android:layout_width="110dp"
-                                android:layout_height="110dp"
-                                android:layout_marginLeft="10dp"
-                                android:layout_marginTop="0dp"
-                                android:background="@drawable/ads_button_bg"
-                                android:id="@+id/imageView5"
-                                android:layout_gravity="center"/>
-
-                        <ImageView
-                                android:layout_width="110dp"
-                                android:layout_height="110dp"
-                                android:layout_marginLeft="10dp"
-                                android:layout_marginTop="0dp"
-                                android:background="@drawable/ads_button_bg"
-                                android:id="@+id/imageView5"
-                                android:layout_gravity="center"/>
-
-
-                    </LinearLayout>
-
-                    </RelativeLayout>
+            <LinearLayout android:layout_width="match_parent"
+                          android:layout_height="120dp"
+                          android:orientation="horizontal"
+                          android:id="@+id/composite_lin_lay_user_images"
+            >
+            </LinearLayout>
 
         </HorizontalScrollView>
 
@@ -217,7 +134,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textAppearance="?android:attr/textAppearanceSmall"
-                            android:layout_marginTop="16dp"
                             android:layout_marginLeft="10dp"
                             android:textSize="20dp"
                             android:textColor="#fffd8001"
@@ -228,7 +144,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textAppearance="?android:attr/textAppearanceSmall"
-                            android:layout_marginTop="16dp"
                             android:layout_marginLeft="10dp"
                             android:textSize="20dp"
                             android:textColor="#fffd8001"
@@ -251,7 +166,6 @@
                             android:layout_height="wrap_content"
                             android:textAppearance="?android:attr/textAppearanceSmall"
                             android:text="Цели знакомства:"
-                            android:layout_marginTop="16dp"
                             android:textSize="20dp"
                             android:layout_marginLeft="10dp"
                             android:textColor="#fffd8001"
@@ -262,7 +176,6 @@
                             android:layout_height="wrap_content"
                             android:textAppearance="?android:attr/textAppearanceSmall"
                             android:text="content"
-                            android:layout_marginTop="16dp"
                             android:textSize="20dp"
                             android:layout_marginLeft="10dp"
                             android:textColor="#fffd8001"
@@ -285,7 +198,6 @@
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:text="Семейное положение:"
                         android:textSize="20dp"
-                        android:layout_marginTop="16dp"
                         android:layout_marginLeft="10dp"
                         android:textColor="#fffd8001"
                         android:id="@+id/composite_contact_content_polojenie"
@@ -296,7 +208,6 @@
                             android:textAppearance="?android:attr/textAppearanceSmall"
                             android:text="content"
                             android:textSize="20dp"
-                            android:layout_marginTop="16dp"
                             android:layout_marginLeft="10dp"
                             android:textColor="#fffd8001"
                             android:id="@+id/composite_contact_content_polojenie_content"
@@ -318,7 +229,6 @@
                             android:textAppearance="?android:attr/textAppearanceSmall"
                             android:text="Хобби:"
                             android:textSize="20dp"
-                            android:layout_marginTop="16dp"
                             android:layout_marginLeft="10dp"
                             android:textColor="#fffd8001"
                             android:id="@+id/composite_contact_content_hobby"
@@ -329,7 +239,6 @@
                             android:textAppearance="?android:attr/textAppearanceSmall"
                             android:text="content"
                             android:textSize="20dp"
-                            android:layout_marginTop="16dp"
                             android:layout_marginLeft="10dp"
                             android:textColor="#fffd8001"
                             android:id="@+id/composite_contact_content_hobby_content"
@@ -351,7 +260,6 @@
                             android:textAppearance="?android:attr/textAppearanceSmall"
                             android:text="Любимая музыка:"
                             android:textSize="20dp"
-                            android:layout_marginTop="16dp"
                             android:layout_marginLeft="10dp"
                             android:textColor="#fffd8001"
                             android:id="@+id/composite_contact_content_music"
@@ -362,7 +270,6 @@
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:text="content"
                         android:textSize="20dp"
-                        android:layout_marginTop="16dp"
                         android:layout_marginLeft="10dp"
                         android:textColor="#fffd8001"
                         android:id="@+id/composite_contact_content_music_content"
@@ -384,7 +291,6 @@
                             android:textAppearance="?android:attr/textAppearanceSmall"
                             android:text="О себе:"
                             android:textSize="22dp"
-                            android:layout_marginTop="16dp"
                             android:layout_marginLeft="10dp"
                             android:textColor="#fffd8001"
                             android:id="@+id/composite_contact_content_about"
@@ -395,7 +301,6 @@
                             android:textAppearance="?android:attr/textAppearanceSmall"
                             android:text="content"
                             android:textSize="22dp"
-                            android:layout_marginTop="16dp"
                             android:layout_marginLeft="10dp"
                             android:textColor="#fffd8001"
                             android:id="@+id/composite_contact_content_about_content"
