--- a/NewsTagil/src/main/res/layout/composite_contact_content.xml
+++ b/NewsTagil/src/main/res/layout/composite_contact_content.xml
@@ -67,6 +67,7 @@
                                 android:layout_height="26dp"
                                 android:textSize="14dp"
                                 android:text="Начать диалог"
+                                android:textColor="@color/lightGray"
                                 android:background="@drawable/ads_button_bg"
                                 android:id="@+id/composite_contact_content_start_dialog"
                                 android:layout_gravity="left|center_vertical"/>
@@ -82,7 +83,7 @@
                         android:layout_below="@+id/linearLayout22"
                         android:layout_centerHorizontal="true"
                         android:background="#fffd8001"
-                        android:id="@+id/linearLayout2">
+                        android:id="@+id/contact_photo_panel">
 
                     <TextView
                             android:layout_width="wrap_content"
@@ -102,7 +103,7 @@
                         android:layout_width="fill_parent"
                         android:layout_height="80dp"
                         android:background="@drawable/contact_ley_bg"
-                        android:layout_below="@+id/linearLayout2"
+                        android:layout_below="@+id/contact_photo_panel"
                         android:layout_centerHorizontal="true"
                         android:id="@+id/linearLayout3">
 
@@ -111,92 +112,17 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/horizontalScrollView"
                 android:layout_centerVertical="true"
-                android:layout_alignLeft="@+id/imageView3">
+                android:layout_alignLeft="@+id/imageView3"
+                android:fillViewport="false">
 
-                    <RelativeLayout
-                            android:layout_width="fill_parent"
-                            android:layout_height="80dp"
-                            android:paddingTop="10dp">
-
-                    <LinearLayout android:layout_width="wrap_content"
-                                  android:layout_height="wrap_content">
-                        <ImageView
-                                android:layout_width="60dp"
-                                android:layout_height="60dp"
-                                android:layout_marginLeft="10dp"
-                                android:layout_marginTop="0dp"
-                                android:background="@drawable/ads_button_bg"
-                                android:id="@+id/imageView2"
-                                android:layout_gravity="left|center_vertical"/>
-
-                        <ImageView
-                                android:layout_width="60dp"
-                                android:layout_height="60dp"
-                                android:layout_marginLeft="10dp"
-                                android:layout_marginTop="0dp"
-                                android:background="@drawable/ads_button_bg"
-                                android:id="@+id/imageView3"
-                                android:layout_gravity="center"/>
-
-                        <ImageView
-                                android:layout_width="60dp"
-                                android:layout_height="60dp"
-                                android:layout_marginLeft="10dp"
-                                android:layout_marginTop="0dp"
-                                android:background="@drawable/ads_button_bg"
-                                android:id="@+id/imageView4"
-                                android:layout_gravity="center"/>
-
-                        <ImageView
-                                android:layout_width="60dp"
-                                android:layout_height="60dp"
-                                android:layout_marginLeft="10dp"
-                                android:layout_marginTop="0dp"
-                                android:background="@drawable/ads_button_bg"
-                                android:id="@+id/imageView5"
-                                android:layout_gravity="center"/>
-
-                        <ImageView
-                                android:layout_width="60dp"
-                                android:layout_height="60dp"
-                                android:layout_marginLeft="10dp"
-                                android:layout_marginTop="0dp"
-                                android:background="@drawable/ads_button_bg"
-                                android:id="@+id/imageView5"
-                                android:layout_gravity="center"/>
-
-                        <ImageView
-                                android:layout_width="60dp"
-                                android:layout_height="60dp"
-                                android:layout_marginLeft="10dp"
-                                android:layout_marginTop="0dp"
-                                android:background="@drawable/ads_button_bg"
-                                android:id="@+id/imageView5"
-                                android:layout_gravity="center"/>
-
-                        <ImageView
-                                android:layout_width="60dp"
-                                android:layout_height="60dp"
-                                android:layout_marginLeft="10dp"
-                                android:layout_marginTop="0dp"
-                                android:background="@drawable/ads_button_bg"
-                                android:id="@+id/imageView5"
-                                android:layout_gravity="center"/>
-
-                        <ImageView
-                                android:layout_width="60dp"
-                                android:layout_height="60dp"
-                                android:layout_marginLeft="10dp"
-                                android:layout_marginTop="0dp"
-                                android:background="@drawable/ads_button_bg"
-                                android:id="@+id/imageView5"
-                                android:layout_gravity="center"/>
+                    <LinearLayout android:layout_width="match_parent"
+                                  android:layout_height="80dp"
+                                  android:orientation="horizontal"
+                                  android:id="@+id/composite_lin_lay_user_images"
+                            >
 
 
                     </LinearLayout>
-
-                    </RelativeLayout>
-
         </HorizontalScrollView>
 
                 </LinearLayout>
@@ -214,7 +140,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textAppearance="?android:attr/textAppearanceSmall"
-                            android:layout_marginTop="12dp"
                             android:layout_marginLeft="10dp"
                             android:textSize="12dp"
                             android:textColor="#fffd8001"
@@ -225,7 +150,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textAppearance="?android:attr/textAppearanceSmall"
-                            android:layout_marginTop="12dp"
                             android:layout_marginLeft="10dp"
                             android:textSize="12dp"
                             android:textColor="#fffd8001"
@@ -248,7 +172,6 @@
                             android:layout_height="wrap_content"
                             android:textAppearance="?android:attr/textAppearanceSmall"
                             android:text="Цели знакомства:"
-                            android:layout_marginTop="12dp"
                             android:textSize="12dp"
                             android:layout_marginLeft="10dp"
                             android:textColor="#fffd8001"
@@ -259,7 +182,6 @@
                             android:layout_height="wrap_content"
                             android:textAppearance="?android:attr/textAppearanceSmall"
                             android:text="Цели знакомства:"
-                            android:layout_marginTop="12dp"
                             android:textSize="12dp"
                             android:layout_marginLeft="10dp"
                             android:textColor="#fffd8001"
@@ -282,7 +204,6 @@
                             android:textAppearance="?android:attr/textAppearanceSmall"
                             android:text="Семейное положение:"
                             android:textSize="12dp"
-                            android:layout_marginTop="12dp"
                             android:layout_marginLeft="10dp"
                             android:textColor="#fffd8001"
                             android:id="@+id/composite_contact_content_polojenie"
@@ -293,7 +214,6 @@
                             android:textAppearance="?android:attr/textAppearanceSmall"
                             android:text="Семейное положение:"
                             android:textSize="12dp"
-                            android:layout_marginTop="12dp"
                             android:layout_marginLeft="10dp"
                             android:textColor="#fffd8001"
                             android:id="@+id/composite_contact_content_polojenie_content"
@@ -315,7 +235,6 @@
                             android:textAppearance="?android:attr/textAppearanceSmall"
                             android:text="Хобби:"
                             android:textSize="12dp"
-                            android:layout_marginTop="12dp"
                             android:layout_marginLeft="10dp"
                             android:textColor="#fffd8001"
                             android:id="@+id/composite_contact_content_hobby"
@@ -326,7 +245,6 @@
                             android:textAppearance="?android:attr/textAppearanceSmall"
                             android:text="Хобби:"
                             android:textSize="12dp"
-                            android:layout_marginTop="12dp"
                             android:layout_marginLeft="10dp"
                             android:textColor="#fffd8001"
                             android:id="@+id/composite_contact_content_hobby_content"
@@ -348,7 +266,6 @@
                             android:textAppearance="?android:attr/textAppearanceSmall"
                             android:text="Любимая музыка:"
                             android:textSize="12dp"
-                            android:layout_marginTop="12dp"
                             android:layout_marginLeft="10dp"
                             android:textColor="#fffd8001"
                             android:id="@+id/composite_contact_content_music"
@@ -359,7 +276,6 @@
                             android:textAppearance="?android:attr/textAppearanceSmall"
                             android:text="Любимая музыка:"
                             android:textSize="12dp"
-                            android:layout_marginTop="12dp"
                             android:layout_marginLeft="10dp"
                             android:textColor="#fffd8001"
                             android:id="@+id/composite_contact_content_music_content"
