--- a/NewsTagil/src/main/res/values/colors.xml
+++ b/NewsTagil/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="lightGray">#ccc9c3</color>
     <color name="Transparent">#00000000</color>
+    <color name="Black">#000000</color>
 </resources>
