Добавлено обновление в превью новостей (если пока пользователь просматривает были добавлены новые новости), и многое другое мелкое и интересное что я уж и не помню

--- a/NewsTagil/src/main/res/layout-small/activity_ads.xml
+++ b/NewsTagil/src/main/res/layout-small/activity_ads.xml
@@ -15,11 +15,26 @@
             android:id="@+id/include"/>
 
     <include
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            layout="@layout/composite_ads_content"
+            layout="@layout/composite_ads_selector"
             android:layout_below="@+id/include"
-            android:layout_centerHorizontal="true"/>
+            android:id="@+id/ads_selector"/>
+
+    <ru.news.tagil.utility.myScrollView
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:paddingBottom="10dp"
+            android:id="@+id/ads_scroller"
+            android:layout_below="@+id/ads_selector">
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/ads_content_holder"
+                >
+        </LinearLayout>
+    </ru.news.tagil.utility.myScrollView>
 
 
 </RelativeLayout>
