--- a/NewsTagil/src/main/res/layout/activity_ads.xml
+++ b/NewsTagil/src/main/res/layout/activity_ads.xml
@@ -10,13 +10,13 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:id="@+id/include" />
+            android:id="@+id/activity_ads_include" />
 
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/include"
+            android:layout_below="@+id/activity_ads_include"
             android:id="@+id/ads_selector"/>
 
     <ru.news.tagil.utility.myScrollView
